--- a/Lab Documents/Lab1.tex
+++ b/Lab Documents/Lab1.tex
@@ -100,7 +100,7 @@ However, there are disadvantages to novelty. One being that files \& devices can
 system	call	interface	provided	by	the	operating	system?	How?
 }
 
-Yes, the user can achieve this.  It can be done by creating their own shell program, and within it, have files named after its specific commands such as 'rm' or 'cp' UNIX commands that will run when the user inputs such values into the CLI. So long as the user-created command interpreter "communicates properly" with the OS's system call interface (follow its set rules/patterns), its functionality should work (Page 52).
+Yes, the user can achieve this.  It can be done by creating their own shell program, and within it, have files named after its specific commands (such as the 'rm' or 'cp' UNIX commands) that will run when the user inputs such values into the CLI. So long as the user-created command interpreter "communicates properly" with the OS's system call interface (follow its set rules/patterns), its functionality should work (Page 52).
 
 
 \end{document}
